# openai_cost_calculator

./: .gitignore  CODEX_SELF_TEST_REPORT.md  MANIFEST.in  README.md  index.html  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: compatibility.yml  pricing-check.yml  tests.yml
data/: gpt_pricing_data.csv
openai_cost_calculator/: __init__.py  cli.py  core.py  estimate.py  parser.py  pricing.py  telemetry.py  tracker.py  types.py
openai_cost_calculator/adapters/: anthropic_pricing.py  claude_code.py  claude_proxy.py  codex.py  common.py  install.py
openai_cost_calculator/anthropic/: __init__.py  pricing.py  resolve.py  stream.py  usage.py
openai_cost_calculator/proxy/: __init__.py  anthropic_accounting.py  app.py  ledger.py  registry.py  streaming.py  upstreams.py
scripts/: check_pricing.py  self_test_claude_integration.py  self_test_codex_integration.py
tests/: asgi_client.py  test_adapters.py  test_anthropic_pricing.py  test_anthropic_stream.py  test_anthropic_usage.py  test_claude_install.py  test_claude_proxy_adapter.py  test_claude_resolve.py  test_cli.py  test_cost_estimator.py  test_persistence.py  test_pricing_csv.py  test_proxy.py  test_proxy_anthropic.py  test_self_test.py  test_tracker.py  test_upstreams.py
