[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai_cost_calculator"
version = "1.2.0"
description = "A library to estimate OpenAI API costs based on token usage."
authors = [
    { name = "Orkun Kınay, Murat Barkın Kınay", email = "orkunkinay@sabanciuniv.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.optional-dependencies]
proxy = [
    "fastapi",
    "httpx",
    "uvicorn",
]

[project.scripts]
openai-cost-calculator = "openai_cost_calculator.cli:main"

[tool.setuptools.packages.find]
include = ["openai_cost_calculator*"]

[project.urls]
Homepage = "https://github.com/orkunkinay/openai_cost_calculator"
Repository = "https://github.com/orkunkinay/openai_cost_calculator"
Issues = "https://github.com/orkunkinay/openai_cost_calculator/issues"
