[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai_cost_calculator"
version = "1.2.0"
description = "A library to estimate OpenAI API costs based on token usage."
authors = [
    { name = "Orkun Kınay, Murat Barkın Kınay", email = "orkunkinay@sabanciuniv.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
proxy = [
    "fastapi",
    "httpx",
    "uvicorn",
    "websockets>=13",
]

[project.scripts]
openai-cost-calculator = "openai_cost_calculator.cli:main"
occ-cc-statusline = "openai_cost_calculator.adapters.claude_code:statusline_main"
occ-cc-stop-hook = "openai_cost_calculator.adapters.claude_code:stop_hook_main"
occ-codex-notify = "openai_cost_calculator.adapters.codex:notify_main"
occ-codex-statusline = "openai_cost_calculator.adapters.codex:statusline_main"

[tool.setuptools.packages.find]
include = ["openai_cost_calculator*"]

[project.urls]
Homepage = "https://github.com/orkunkinay/openai_cost_calculator"
Repository = "https://github.com/orkunkinay/openai_cost_calculator"
Issues = "https://github.com/orkunkinay/openai_cost_calculator/issues"
